--- a/src/app/features/crm/components/activity-management/activity-types/activity-types.component.html
+++ b/src/app/features/crm/components/activity-management/activity-types/activity-types.component.html
@@ -213,16 +213,16 @@
 <!--Delete Activity Modal -->
 <div
   class="modal fade"
-  id="deleteActivityModal"
+  id="deleteActivityTypeModal"
   tabindex="-1"
-  aria-labelledby="deleteActivityModalLabel"
+  aria-labelledby="deleteActivityTypeModalLabel"
   aria-hidden="true"
 >
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="deleteActivityModalLabel">
-          Are you sure you want to delete the activity type
+      <div class="modal-header" style="border: none">
+        <h1 class="modal-title fs-5 text-danger" id="deleteActivityModalLabel">
+          Confirm delete!
         </h1>
         <button
           type="button"
@@ -231,12 +231,22 @@
           aria-label="Close"
         ></button>
       </div>
-      <div class="modal-body">...</div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-          Close
+      <div class="modal-body">
+        <p class="fs-5 text-muted">
+          Are you sure you want to delete the activity type
+        </p>
+      </div>
+      <div class="modal-footer" style="border: none">
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+          Cancel
         </button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button
+          type="button"
+          class="btn btn-danger"
+          (click)="confirmDeleteActivityType()"
+        >
+          Confirm Delete
+        </button>
       </div>
     </div>
   </div>
