--- a/src/app/features/entities/components/entity/new-entity/new-entity.component.css
+++ b/src/app/features/entities/components/entity/new-entity/new-entity.component.css
@@ -1,64 +1,60 @@
 .img_upload {
-    display: inline-block;
-    font-family: 'Roboto', serif;
-    text-align: center;
-    background-color: white;
-    color: var(--primary-color);
-    padding: 0.5rem;
-    border-radius: 0.3rem;
-    cursor: pointer;
-    border: 1px solid var(--primary-color);
-    border-radius: 2px 1px 2px 2px;
+  display: inline-block;
+  font-family: "Roboto", serif;
+  text-align: center;
+  background-color: white;
+  color: var(--primary-color);
+  padding: 0.5rem;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  border: 1px solid var(--primary-color);
+  border-radius: 2px 1px 2px 2px;
 
-    .fa {
-        vertical-align: middle;
-
-    }
+  .fa {
+    vertical-align: middle;
+  }
 }
 
 .img_edit {
-    color: var(--primary-color);
-    font-size: 14px;
+  color: var(--primary-color);
+  font-size: 14px;
 }
 
 .img_edit:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 #profile-photo {
-    width: 50px;
-    height: 50px;
-    margin-right: 16px;
-    border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin-right: 16px;
+  border-radius: 50%;
 }
 
 #rolesButton {
-    display: block;
-    width: 100%;
-    height: calc(1.5em + 0.75rem + 2px);
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    border-radius: 0;
-
+  display: block;
+  width: 100%;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  border-radius: 0;
 }
 
 #rolesButton:hover {
-    color: #3e90e8;
+  color: #3e90e8;
 }
 
 .btn-md:hover,
 .btn-md:focus,
 .btn-md:active,
 .btn-md.active {
-    background-color: transparent;
-
+  background-color: transparent;
 }
 
-
 .black-text {
-    color: black;
+  color: black;
 }
 
 .card-body {
@@ -69,8 +65,22 @@
   padding: 0.7em;
 }
 
+::ng-deep .p-dropdown .p-dropdown-label {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+::ng-deep .p-dropdown .p-dropdown-filter {
+  height: 35px;
+}
+
+::ng-deep .p-dropdown-invalid .p-dropdown {
+  border: solid 1px red !important;
+}
+
 @media (max-width: 576px) {
-    .card-body {
-        padding: 10px;
-    }
+  .card-body {
+    padding: 10px;
+  }
 }
